--- a/views/home/index.marko
+++ b/views/home/index.marko
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8"/>
-    <title>Express Marko</title>
-    <!-- CSS includes -->
-    <lasso-head/>
-  </head>
-  <body>
-    <!-- Top-level UI component: -->
-    <!-- JS includes -->
-    <lasso-body/>
-  </body>
-</html>
+<lasso-page package-path="./browser.json"/>
+<app-main>
+  <@body>
+    <app-header/>
+  </@body>
+</app-main>
