--- a/components/app-header/index.marko
+++ b/components/app-header/index.marko
@@ -1,15 +1,7 @@
 <div class="navbar-fixed">
-  <nav>
+  <nav class="white">
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">Logo</a>
-      <ul class="right hide-on-med-and-down">
-        <li>
-          <a href="sass.html">Sass</a>
-        </li>
-        <li>
-          <a href="badges.html">Components</a>
-        </li>
-      </ul>
+      <a href="#!" class="brand-logo grey-text">&nbsp; Express Marko</a>
     </div>
   </nav>
 </div>
