--- a/views/home/index.marko
+++ b/views/home/index.marko
@@ -2,5 +2,14 @@
 <app-main>
   <@body>
     <app-header/>
+    <div class="container">
+      <!-- Page Content goes here -->
+      <div class="row">
+      <img class="responsive-img" src="./img/logo.png">
+      </div>
+      <div class="row">
+       <app-card/>
+      </div>
+    </div>
   </@body>
 </app-main>
