--- a/components/app-card/index.marko
+++ b/components/app-card/index.marko
@@ -1,15 +1,11 @@
 <div class="col s12">
-  <div class="card blue-grey darken-1">
-    <div class="card-content white-text">
-      <span class="card-title">Express Marko</span>
+  <div class="card">
+    <div class="card-content grey-text">
+      <span class="card-title">Express Marko - Simple, Fast, & Progressive HTML</span>
       <p>
-        I am a very simple card. I am good at containing small bits of information.
-                  I am convenient because I require little markup to use effectively.
+        <strong>Hi,</strong> Welcome to Express Marko starter kit. This starter kit also uses MaterialzeCSS for UI-UX.
+        This kit also includes an api route at /api.
       </p>
-    </div>
-    <div class="card-action">
-      <a href="#">This is a link</a>
-      <a href="#">This is a link</a>
     </div>
   </div>
 </div>
